fixed spacing issues

--- a/src/css/search.css
+++ b/src/css/search.css
@@ -56,6 +56,7 @@
 .singleWrapper {
   background-color: #f2f2fd;
   width: 100%;
+  min-height: calc(100vh - 50px);
 }
 
 .singleCard {
@@ -64,7 +65,6 @@
   justify-content: center;
   align-items: flex-start;
   width: 75%;
-  max-width: 1184px;
   margin: 0 auto;
 }
 
